// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render with a value of "[ 'audio', 'video' ]" 1`] = `
<div
  class="select"
>
  <button
    class="displayValue default"
    type="button"
  >
    <div
      aria-label="sulu_admin.all_selected"
      class="croppedText"
      title="sulu_admin.all_selected"
    >
      <div
        aria-hidden="true"
        class="front"
      >
        sulu_admin.a
      </div>
      <div
        aria-hidden="true"
        class="back"
      >
        <span>
          ll_selected
        </span>
      </div>
      <div
        class="whole"
      >
        sulu_admin.all_selected
      </div>
    </div>
    <span
      aria-label="su-angle-down"
      class="su-angle-down toggle"
    />
  </button>
</div>
`;

exports[`Render with a value of "[ 'image', 'video' ]" 1`] = `
<div
  class="select"
>
  <button
    class="displayValue default"
    type="button"
  >
    <div
      aria-label="sulu_admin.all_selected"
      class="croppedText"
      title="sulu_admin.all_selected"
    >
      <div
        aria-hidden="true"
        class="front"
      >
        sulu_admin.a
      </div>
      <div
        aria-hidden="true"
        class="back"
      >
        <span>
          ll_selected
        </span>
      </div>
      <div
        class="whole"
      >
        sulu_admin.all_selected
      </div>
    </div>
    <span
      aria-label="su-angle-down"
      class="su-angle-down toggle"
    />
  </button>
</div>
`;

exports[`Render with a value of "undefined" 1`] = `
<div
  class="select"
>
  <button
    class="displayValue default"
    type="button"
  >
    <div
      aria-label="sulu_admin.none_selected"
      class="croppedText"
      title="sulu_admin.none_selected"
    >
      <div
        aria-hidden="true"
        class="front"
      >
        sulu_admin.n
      </div>
      <div
        aria-hidden="true"
        class="back"
      >
        <span>
          one_selected
        </span>
      </div>
      <div
        class="whole"
      >
        sulu_admin.none_selected
      </div>
    </div>
    <span
      aria-label="su-angle-down"
      class="su-angle-down toggle"
    />
  </button>
</div>
`;

exports[`Render with value set by setValue 1`] = `
<div
  class="select"
>
  <button
    class="displayValue default"
    type="button"
  >
    <div
      aria-label="sulu_admin.all_selected"
      class="croppedText"
      title="sulu_admin.all_selected"
    >
      <div
        aria-hidden="true"
        class="front"
      >
        sulu_admin.a
      </div>
      <div
        aria-hidden="true"
        class="back"
      >
        <span>
          ll_selected
        </span>
      </div>
      <div
        class="whole"
      >
        sulu_admin.all_selected
      </div>
    </div>
    <span
      aria-label="su-angle-down"
      class="su-angle-down toggle"
    />
  </button>
</div>
`;
